--- a/content/docs/operators.mdx
+++ b/content/docs/operators.mdx
@@ -1,69 +1,68 @@
 ---
-title: Java Operators
-description: In this tutorial, you'll learn about different types of operators in Java, their syntax and how to use them with the help of examples.
-
+title: "Operadores em Java"
+description: "Neste tutorial, você aprenderá sobre diferentes tipos de operadores em Java, sua sintaxe e como usá-los com exemplos práticos"
+difficulty: "Básico"
+category: "Fundamentos Java"
 ---
 
+## Operadores em Java
 
+Operadores são símbolos que realizam operações em variáveis e valores. Por exemplo, `+` é um operador usado para adição, enquanto `*` também é um operador usado para multiplicação.
 
+Operadores em Java podem ser classificados em 6 tipos:
 
-Operators are symbols that perform operations on variables and values. For example,`+` is an operator used for addition, while `*` is also an operator used for multiplication.
+1. Operadores Aritméticos
+2. Operadores de Atribuição
+3. Operadores Relacionais
+4. Operadores Lógicos
+5. Operadores Unários
+6. Operadores Bit a Bit
 
-Operators in Java can be classified into 5 types:
+## 1. Operadores Aritméticos Java
 
-1. Arithmetic Operators
-2. Assignment Operators
-3. Relational Operators
-4. Logical Operators
-5. Unary Operators
-6. Bitwise Operators
-
-
-## 1. Java Arithmetic Operators
-Arithmetic operators are used to perform arithmetic operations on variables and data. For example,
+Operadores aritméticos são usados para realizar operações aritméticas em variáveis e dados. Por exemplo:
 
 ```java
 a + b;
 ```
-Here, the `+` operator is used to add two variables `a` and `b`. Similarly, there are various other arithmetic operators in Java.
 
+Aqui, o operador `+` é usado para adicionar duas variáveis `a` e `b`. Da mesma forma, existem vários outros operadores aritméticos em Java.
 
-|   Operator  | Operation |
-| :---------: | :-------: |
-| **+** |Addition |
-| **-** |Substraction |
-| ***** |Multiplication |
-| **/** |Division |
-| **%** |Modulus Operation (Remainder after division) |
+| Operador |               Operação                |
+| :------: | :-----------------------------------: |
+|  **+**   |                Adição                 |
+|  **-**   |               Subtração               |
+|  \*\*\*  |             Multiplicação             |
+|  **/**   |                Divisão                |
+|  **%**   | Operação de Módulo (Resto da divisão) |
 
-
-#### Example 1: Arithmetic Operators
+### Exemplo 1: Operadores Aritméticos
 
 ```java
-class Main {
-  public static void main(String[] args) {
+public class Main {
+    public static void main(String[] args) {
+        // declarar variáveis
+        int a = 12, b = 5;
 
-    // declare variables
-    int a = 12, b = 5;
+        // operador de adição
+        System.out.println("a + b = " + (a + b));
 
-    // addition operator
-    System.out.println("a + b = " + (a + b));
+        // operador de subtração
+        System.out.println("a - b = " + (a - b));
 
-    // subtraction operator
-    System.out.println("a - b = " + (a - b));
+        // operador de multiplicação
+        System.out.println("a * b = " + (a * b));
 
-    // multiplication operator
-    System.out.println("a * b = " + (a * b));
+        // operador de divisão
+        System.out.println("a / b = " + (a / b));
 
-    // division operator
-    System.out.println("a / b = " + (a / b));
-
-    // modulo operator
-    System.out.println("a % b = " + (a % b));
-  }
+        // operador de módulo
+        System.out.println("a % b = " + (a % b));
+    }
 }
 ```
-#### Output
+
+**Saída**:
 
 ```plaintext
 a + b = 17
@@ -72,352 +71,564 @@ a * b = 60
 a / b = 2
 a % b = 2
 ```
-In the above example, we have used `+`, `-`, and `*` operators to compute addition, subtraction, and multiplication operations.
 
-### / Division Operator
+No exemplo acima, usamos os operadores `+`, `-` e `*` para calcular operações de adição, subtração e multiplicação.
 
-Note the operation, `a / b` in our program. The `/` operator is the division operator.
+### Operador de Divisão /
 
-If we use the division operator with two integers, then the resulting quotient will also be an integer. And, if one of the operands is a floating-point number, we will get the result will also be in floating-point.
+Observe a operação `a / b` em nosso programa. O operador `/` é o operador de divisão.
+
+Se usarmos o operador de divisão com dois inteiros, então o quociente resultante também será um inteiro. E, se um dos operandos for um número de ponto flutuante, obteremos o resultado também em ponto flutuante.
 
 ```java
-In Java,
+Em Java,
 
-(9 / 2) is 4
-(9.0 / 2) is 4.5
-(9 / 2.0) is 4.5
-(9.0 / 2.0) is 4.5
+(9 / 2) é 4
+(9.0 / 2) é 4.5
+(9 / 2.0) é 4.5
+(9.0 / 2.0) é 4.5
 ```
-### % Modulo Operator
 
-The modulo operator `%` computes the remainder. When `a = 7` is divided by `b = 4`, the remainder is **3**.
+### Operador de Módulo %
+
+O operador de módulo `%` calcula o resto. Quando `a = 7` é dividido por `b = 4`, o resto é **3**.
 
 <Callout>
 
-**Note**: The `%` operator is mainly used with integers.
+**Nota**: O operador `%` é usado principalmente com inteiros.
 
 </Callout>
 
-## 2. Java Assignment Operators
-Assignment operators are used in Java to assign values to variables. For example,
+### Exemplos Práticos de Operadores Aritméticos
 
 ```java
-int age;
-age = 5;
-```
-Here, = is the assignment operator. It assigns the value on its right to the variable on its left. That is, 5 is assigned to the variable age.
+public class ExemplosAritmeticos {
+    public static void main(String[] args) {
+        // Operações básicas
+        int x = 10;
+        int y = 3;
 
-Let's see some more assignment operators available in Java.
+        System.out.println("x = " + x + ", y = " + y);
+        System.out.println("Adição: " + (x + y));
+        System.out.println("Subtração: " + (x - y));
+        System.out.println("Multiplicação: " + (x * y));
+        System.out.println("Divisão inteira: " + (x / y));
+        System.out.println("Módulo: " + (x % y));
 
-|Operator |	Example |	Equivalent to |
-|:-------:|:-------:|:-------------:|
-| =  |	a = b;  |	a = b; |
-| += |	a += b; |	a = a + b; |
-| -= |	a -= b; |	a = a - b; |
-| *= |	a *= b;	|   a = a * b; |
-| /= |	a /= b; |	a = a / b; |
-| %= |	a %= b; |	a = a % b; |
+        // Divisão com ponto flutuante
+        double a = 10.0;
+        double b = 3.0;
+        System.out.println("Divisão decimal: " + (a / b));
 
-#### Example 2: Assignment Operators
+        // Cálculo de área
+        double largura = 5.5;
+        double altura = 3.2;
+        double area = largura * altura;
+        System.out.println("Área do retângulo: " + area);
 
-```java
-class Main {
-  public static void main(String[] args) {
-
-    // create variables
-    int a = 4;
-    int var;
-
-    // assign value using =
-    var = a;
-    System.out.println("var using =: " + var);
-
-    // assign value using =+
-    var += a;
-    System.out.println("var using +=: " + var);
-
-    // assign value using =*
-    var *= a;
-    System.out.println("var using *=: " + var);
-  }
-}
-```
-Output
-
-```plaintext
-var using =: 4
-var using +=: 8
-var using *=: 32
-```
-
-## 3. Java Relational Operators
-Relational operators are used to check the relationship between two operands. For example,
-
-```java
-// check is a is less than b
-a < b;
-```
-Here, `>` operator is the relational operator. It checks if `a` is less than `b` or not.
-
-It returns either true or false.
-
-| Operator | Description | Example |
-| :------: | :---------: | :------: |
-| == |	Is Equal To	     | 3 == 5 returns false |
-| != |	Not Equal To	 | 3 != 5 returns true |
-|  `>` |	Greater Than	 |  3 `>` 5 returns false |
-|  `<` |  Less Than	     | 3 `<` 5 returns true |
-| `>=` |	Greater Than or Equal To |	3 `>=` 5 returns false |
-| `<=` |  Less Than or Equal To |	3 `<=` 5 returns true |
-
-#### Example 3: Relational Operators
-
-```java
-class Main {
-  public static void main(String[] args) {
-
-    // create variables
-    int a = 7, b = 11;
-
-    // value of a and b
-    System.out.println("a is " + a + " and b is " + b);
-
-    // == operator
-    System.out.println(a == b);  // false
-
-    // != operator
-    System.out.println(a != b);  // true
-
-    // > operator
-    System.out.println(a > b);  // false
-
-    // < operator
-    System.out.println(a < b);  // true
-
-    // >= operator
-    System.out.println(a >= b);  // false
-
-    // <= operator
-    System.out.println(a <= b);  // true
-  }
-}
-```
-<br/>
-
-<Callout>
-
-**Note**: Relational operators are used in decision making and loops.
-
-</Callout>
-
-## 4. Java Logical Operators
-Logical operators are used to check whether an expression is true or false. They are used in decision making.
-
-<table>
-    <thead>
-    <tr>
-      <th>Operator</th>
-      <th>Example</th>
-      <th>Meaning</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>&&(Logical AND)</td>
-      <td>expression1 && expression2 </td>
-      <td>true only if both expression1 and expression2 are true </td>
-    </tr>
-    <tr>
-      <td>||(Logical OR)</td>
-      <td>expression1 || expression2</td>
-      <td>true if either expression1 or expression2 is</td>
-    </tr>
-    <tr>
-      <td>!(Logical NOT)</td>
-      <td>!expression</td>
-      <td>true if expression is false and vice versa</td>
-    </tr>
-    </tbody>
-</table>
-
-#### Example 4: Logical Operators
-
-```java
-class Main {
-  public static void main(String[] args) {
-
-    // && operator
-    System.out.println((5 > 3) && (8 > 5));  // true
-    System.out.println((5 > 3) && (8 < 5));  // false
-
-    // || operator
-    System.out.println((5 < 3) || (8 > 5));  // true
-    System.out.println((5 > 3) || (8 < 5));  // true
-    System.out.println((5 < 3) || (8 < 5));  // false
-
-    // ! operator
-    System.out.println(!(5 == 3));  // true
-    System.out.println(!(5 > 3));  // false
-  }
+        // Cálculo de média
+        int nota1 = 8;
+        int nota2 = 7;
+        int nota3 = 9;
+        double media = (nota1 + nota2 + nota3) / 3.0;
+        System.out.println("Média: " + media);
+    }
 }
 ```
 
-#### Working of Program
+## 2. Operadores de Atribuição Java
 
-- (5 > 3) && (8 > 5) returns true because both (5 > 3) and (8 > 5) are true.
-- (5 > 3) && (8 < 5) returns false because the expression (8 < 5) is false.
-- (5 < 3) || (8 > 5) returns true because the expression (8 > 5) is true.
-- (5 > 3) && (8 > 5) returns true because the expression (5 > 3) is true.
-- (5 > 3) && (8 > 5) returns false because both (5 < 3) and (8 < 5) are false.
-- !(5 == 3) returns true because 5 == 3 is false.
-- !(5 > 3) returns false because 5 > 3 is true.
-
-## 5. Java Unary Operators
-Unary operators are used with only one operand. For example, ++ is a unary operator that increases the value of a variable by 1. That is, ++5 will return 6.
-
-Different types of unary operators are:
-
-| Operator |	Meaning |
-| :------: | :------: |
-| + |	Unary plus: not necessary to use since numbers are positive without using it |
-| - |	Unary minus: inverts the sign of an expression |
-| ++| 	Increment operator: increments value by 1 |
-|-- |	Decrement operator: decrements value by 1 |
-| !	|   Logical complement operator: inverts the value of a boolean |
-
-### Increment and Decrement Operators
-Java also provides increment and decrement operators: **++** and **- -** respectively. **++** increases the value of the operand by **1**, while **- -** decrease it by **1**. For example,
+Operadores de atribuição são usados para atribuir valores a variáveis. Por exemplo:
 
 ```java
-int num = 5;
-
-// increase num by 1
-++num;
+int age = 5;
 ```
-Here, the value of `num` gets increased to **6** from its initial value of **5**.
 
-#### Example 5: Increment and Decrement Operators
+Aqui, `=` é o operador de atribuição. Ele atribui o valor à direita à variável à esquerda.
+
+### Operadores de Atribuição Compostos
+
+| Operador | Exemplo  | Equivalente |
+| :------: | :------- | :---------- |
+|   `+=`   | `a += b` | `a = a + b` |
+|   `-=`   | `a -= b` | `a = a - b` |
+|   `*=`   | `a *= b` | `a = a * b` |
+|   `/=`   | `a /= b` | `a = a / b` |
+|   `%=`   | `a %= b` | `a = a % b` |
+
+### Exemplo 2: Operadores de Atribuição
 
 ```java
-class Main {
-  public static void main(String[] args) {
+public class OperadoresAtribuicao {
+    public static void main(String[] args) {
+        // Atribuição simples
+        int a = 5;
+        System.out.println("a = " + a);
 
-    // declare variables
-    int a = 12, b = 12;
-    int result1, result2;
+        // Atribuição composta
+        a += 3; // a = a + 3
+        System.out.println("a += 3: " + a);
 
-    // original value
-    System.out.println("Value of a: " + a);
+        a -= 2; // a = a - 2
+        System.out.println("a -= 2: " + a);
 
-    // increment operator
-    result1 = ++a;
-    System.out.println("After increment: " + result1);
+        a *= 4; // a = a * 4
+        System.out.println("a *= 4: " + a);
 
-    System.out.println("Value of b: " + b);
+        a /= 2; // a = a / 2
+        System.out.println("a /= 2: " + a);
 
-    // decrement operator
-    result2 = --b;
-    System.out.println("After decrement: " + result2);
-  }
+        a %= 3; // a = a % 3
+        System.out.println("a %= 3: " + a);
+    }
 }
 ```
-#### Output
 
-```plaintext
-Value of a: 12
-After increment: 13
-Value of b: 12
-After decrement: 11
-```
-In the above program, we have used the ++ and - - operator as **prefixes (++a, - -b)**. We can also use these operators as **postfix (a++, b++)**.
+## 3. Operadores Relacionais Java
 
-There is a slight difference when these operators are used as prefix versus when they are used as a postfix.
+Operadores relacionais são usados para verificar a relação entre dois operandos. Eles retornam `true` ou `false`.
 
+| Operador | Descrição        | Exemplo                  |
+| :------: | :--------------- | :----------------------- |
+|   `==`   | Igual a          | `5 == 3` retorna `false` |
+|   `!=`   | Diferente de     | `5 != 3` retorna `true`  |
+|   `>`    | Maior que        | `5 > 3` retorna `true`   |
+|   `<`    | Menor que        | `5 < 3` retorna `false`  |
+|   `>=`   | Maior ou igual a | `5 >= 3` retorna `true`  |
+|   `<=`   | Menor ou igual a | `5 <= 3` retorna `false` |
 
-## 6. Java Bitwise Operators
-Bitwise operators in Java are used to perform operations on individual bits. For example,
-
-```plaintext
-Bitwise complement Operation of 35
-
-35 = 00100011 (In Binary)
-
-~ 00100011
-  ________
-   11011100  = 220 (In decimal)
-```
-
-Here, `~` is a bitwise operator. It inverts the value of each bit (**0** to **1** and **1** to **0**).
-
-The various bitwise operators present in Java are:
-
-| Operator |	Description |
-| :------: | :------: |
-| ~ |	Bitwise Complement |
-| `<<` |	Left Shift |
-| >> |	Right Shift |
-|>>> |	Unsigned Right Shift |
-| &	 |  Bitwise AND |
-| ^	 |  Bitwise exclusive OR |
-
-These operators are not generally used in Java. To learn more, visit [Java Bitwise and Bit Shift Operators](/bitwise-and-bit-shift-operators-in-java).
-
-## 7. Other operators
-Besides these operators, there are other additional operators in Java.
-
-### Java instanceof Operator
-The `instanceof` operator checks whether an object is an instanceof a particular class. For example,
+### Exemplo 3: Operadores Relacionais
 
 ```java
-class Main {
-  public static void main(String[] args) {
+public class OperadoresRelacionais {
+    public static void main(String[] args) {
+        int a = 10;
+        int b = 5;
 
-    String str = "";
-    boolean result;
+        System.out.println("a = " + a + ", b = " + b);
+        System.out.println("a == b: " + (a == b));
+        System.out.println("a != b: " + (a != b));
+        System.out.println("a > b: " + (a > b));
+        System.out.println("a < b: " + (a < b));
+        System.out.println("a >= b: " + (a >= b));
+        System.out.println("a <= b: " + (a <= b));
 
-    // checks if str is an instance of
-    // the String class
-    result = str instanceof String;
-    System.out.println("Is str an object of String? " + result);
-  }
+        // Comparação de strings
+        String str1 = "Java";
+        String str2 = "Java";
+        String str3 = "Python";
+
+        System.out.println("str1 == str2: " + (str1 == str2));
+        System.out.println("str1 == str3: " + (str1 == str3));
+        System.out.println("str1.equals(str2): " + str1.equals(str2));
+    }
 }
 ```
-Output
 
-```plaintext
-Is str an object of String? true
-```
-Here, str is an instance of the String class. Hence, the instanceof operator returns true. To learn more, visit Java instanceof.
+## 4. Operadores Lógicos Java
 
-### Java Ternary Operator
-The ternary operator (conditional operator) is shorthand for the if-then-else statement. For example,
+Operadores lógicos são usados para verificar se uma expressão é `true` ou `false`. Eles são usados para tomar decisões.
 
-```java
-variable = Expression ? expression1 : expression2
-```
-Here's how it works.
+| Operador | Descrição  | Exemplo                          |
+| :------: | :--------- | :------------------------------- |
+|   `&&`   | AND lógico | `true && false` retorna `false`  |
+|  `\|\|`  | OR lógico  | `true \|\| false` retorna `true` |
+|   `!`    | NOT lógico | `!true` retorna `false`          |
 
-- If the `Expression` is `true`, `expression1` is assigned to the `variable`.
-- If the `Expression` is `false`, `expression2` is assigned to the `variable`.
-Let's see an example of a ternary operator.
+### Exemplo 4: Operadores Lógicos
 
 ```java
-class Java {
-  public static void main(String[] args) {
+public class OperadoresLogicos {
+    public static void main(String[] args) {
+        boolean a = true;
+        boolean b = false;
 
-    int februaryDays = 29;
-    String result;
+        System.out.println("a = " + a + ", b = " + b);
+        System.out.println("a && b: " + (a && b));
+        System.out.println("a || b: " + (a || b));
+        System.out.println("!a: " + (!a));
+        System.out.println("!b: " + (!b));
 
-    // ternary operator
-    result = (februaryDays == 28) ? "Not a leap year" : "Leap year";
-    System.out.println(result);
-  }
+        // Exemplo prático
+        int idade = 18;
+        boolean temCarteira = true;
+
+        boolean podeDirigir = idade >= 18 && temCarteira;
+        System.out.println("Pode dirigir? " + podeDirigir);
+
+        // Verificação de senha
+        String senha = "abc123";
+        boolean temComprimentoMinimo = senha.length() >= 6;
+        boolean temNumero = senha.matches(".*\\d.*");
+
+        boolean senhaValida = temComprimentoMinimo && temNumero;
+        System.out.println("Senha válida? " + senhaValida);
+    }
 }
 ```
-Output
-```plaintext
-Leap year
-```
-In the above example, we have used the ternary operator to check if the year is a leap year or not. To learn more, visit the [Java ternary operator](/docs/operators#java-ternary-operator).
 
-Now that you know about Java operators, it's time to know about the order in which operators are evaluated. To learn more, visit [Java Operator Precedence](/java-operator-precedence).
+## 5. Operadores Unários Java
+
+Operadores unários são usados com apenas um operando.
+
+| Operador | Descrição                            |
+| :------: | :----------------------------------- |
+|   `+`    | Unário mais (indica valor positivo)  |
+|   `-`    | Unário menos (indica valor negativo) |
+|   `++`   | Incremento                           |
+|   `--`   | Decremento                           |
+|   `!`    | NOT lógico                           |
+
+### Exemplo 5: Operadores Unários
+
+```java
+public class OperadoresUnarios {
+    public static void main(String[] args) {
+        int a = 5;
+        int b = 3;
+
+        // Operadores de incremento
+        System.out.println("a = " + a);
+        System.out.println("++a = " + (++a)); // Pré-incremento
+        System.out.println("a++ = " + (a++)); // Pós-incremento
+        System.out.println("a = " + a);
+
+        // Operadores de decremento
+        System.out.println("b = " + b);
+        System.out.println("--b = " + (--b)); // Pré-decremento
+        System.out.println("b-- = " + (b--)); // Pós-decremento
+        System.out.println("b = " + b);
+
+        // Operador unário menos
+        int c = 10;
+        System.out.println("c = " + c);
+        System.out.println("-c = " + (-c));
+
+        // Operador NOT lógico
+        boolean flag = true;
+        System.out.println("flag = " + flag);
+        System.out.println("!flag = " + (!flag));
+    }
+}
+```
+
+## 6. Operadores Bit a Bit Java
+
+Operadores bit a bit realizam operações em nível de bit.
+
+| Operador | Descrição                        |
+| :------: | :------------------------------- |
+|   `&`    | AND bit a bit                    |
+|   `\|`   | OR bit a bit                     |
+|   `^`    | XOR bit a bit                    |
+|   `~`    | NOT bit a bit                    |
+|   `<<`   | Deslocamento à esquerda          |
+|   `>>`   | Deslocamento à direita           |
+|  `>>>`   | Deslocamento à direita sem sinal |
+
+### Exemplo 6: Operadores Bit a Bit
+
+```java
+public class OperadoresBitABit {
+    public static void main(String[] args) {
+        int a = 5; // 101 em binário
+        int b = 3; // 011 em binário
+
+        System.out.println("a = " + a + " (" + Integer.toBinaryString(a) + ")");
+        System.out.println("b = " + b + " (" + Integer.toBinaryString(b) + ")");
+
+        // AND bit a bit
+        System.out.println("a & b = " + (a & b) + " (" + Integer.toBinaryString(a & b) + ")");
+
+        // OR bit a bit
+        System.out.println("a | b = " + (a | b) + " (" + Integer.toBinaryString(a | b) + ")");
+
+        // XOR bit a bit
+        System.out.println("a ^ b = " + (a ^ b) + " (" + Integer.toBinaryString(a ^ b) + ")");
+
+        // NOT bit a bit
+        System.out.println("~a = " + (~a) + " (" + Integer.toBinaryString(~a) + ")");
+
+        // Deslocamento à esquerda
+        System.out.println("a << 1 = " + (a << 1) + " (" + Integer.toBinaryString(a << 1) + ")");
+
+        // Deslocamento à direita
+        System.out.println("a >> 1 = " + (a >> 1) + " (" + Integer.toBinaryString(a >> 1) + ")");
+    }
+}
+```
+
+## Exemplos Práticos
+
+### Exemplo 1: Calculadora Simples
+
+```java
+import java.util.Scanner;
+
+public class CalculadoraSimples {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        System.out.print("Digite o primeiro número: ");
+        double num1 = scanner.nextDouble();
+
+        System.out.print("Digite o segundo número: ");
+        double num2 = scanner.nextDouble();
+
+        System.out.print("Digite a operação (+, -, *, /, %): ");
+        char operacao = scanner.next().charAt(0);
+
+        double resultado = 0;
+        boolean operacaoValida = true;
+
+        switch (operacao) {
+            case '+':
+                resultado = num1 + num2;
+                break;
+            case '-':
+                resultado = num1 - num2;
+                break;
+            case '*':
+                resultado = num1 * num2;
+                break;
+            case '/':
+                if (num2 != 0) {
+                    resultado = num1 / num2;
+                } else {
+                    System.out.println("Erro: Divisão por zero!");
+                    operacaoValida = false;
+                }
+                break;
+            case '%':
+                resultado = num1 % num2;
+                break;
+            default:
+                System.out.println("Operação inválida!");
+                operacaoValida = false;
+        }
+
+        if (operacaoValida) {
+            System.out.printf("%.2f %c %.2f = %.2f\n", num1, operacao, num2, resultado);
+        }
+
+        scanner.close();
+    }
+}
+```
+
+### Exemplo 2: Validador de Idade
+
+```java
+public class ValidadorIdade {
+    public static void main(String[] args) {
+        int idade = 18;
+        boolean temCarteira = true;
+        boolean temExperiencia = false;
+
+        // Validações usando operadores lógicos
+        boolean podeDirigir = idade >= 18 && temCarteira;
+        boolean podeDirigirComercial = idade >= 21 && temCarteira && temExperiencia;
+        boolean precisaAcompanhante = idade < 18 || !temCarteira;
+
+        System.out.println("=== Validação de Habilitação ===");
+        System.out.println("Idade: " + idade + " anos");
+        System.out.println("Tem carteira: " + temCarteira);
+        System.out.println("Tem experiência: " + temExperiencia);
+        System.out.println("Pode dirigir: " + podeDirigir);
+        System.out.println("Pode dirigir comercial: " + podeDirigirComercial);
+        System.out.println("Precisa acompanhante: " + precisaAcompanhante);
+    }
+}
+```
+
+### Exemplo 3: Conversor de Temperatura
+
+```java
+public class ConversorTemperatura {
+    public static void main(String[] args) {
+        double celsius = 25.0;
+
+        // Conversões usando operadores aritméticos
+        double fahrenheit = (celsius * 9.0 / 5.0) + 32.0;
+        double kelvin = celsius + 273.15;
+
+        // Verificações usando operadores relacionais
+        boolean estaQuente = celsius > 30.0;
+        boolean estaFrio = celsius < 10.0;
+        boolean temperaturaAdequada = celsius >= 20.0 && celsius <= 25.0;
+
+        System.out.println("=== Conversor de Temperatura ===");
+        System.out.println("Celsius: " + celsius + "°C");
+        System.out.println("Fahrenheit: " + fahrenheit + "°F");
+        System.out.println("Kelvin: " + kelvin + "K");
+        System.out.println("Está quente: " + estaQuente);
+        System.out.println("Está frio: " + estaFrio);
+        System.out.println("Temperatura adequada: " + temperaturaAdequada);
+    }
+}
+```
+
+## Exercícios Práticos
+
+### Exercício 1: Calculadora de IMC
+
+**Objetivo**: Usar operadores aritméticos para calcular IMC.
+
+**Enunciado**: Crie um programa que calcule o IMC usando operadores aritméticos.
+
+**Resolução**:
+
+```java
+import java.util.Scanner;
+
+public class CalculadoraIMC {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        System.out.print("Digite o peso (kg): ");
+        double peso = scanner.nextDouble();
+
+        System.out.print("Digite a altura (m): ");
+        double altura = scanner.nextDouble();
+
+        // Cálculo do IMC usando operadores aritméticos
+        double imc = peso / (altura * altura);
+
+        // Classificação usando operadores relacionais
+        String classificacao;
+        if (imc < 18.5) {
+            classificacao = "Abaixo do peso";
+        } else if (imc < 25) {
+            classificacao = "Peso normal";
+        } else if (imc < 30) {
+            classificacao = "Sobrepeso";
+        } else {
+            classificacao = "Obesidade";
+        }
+
+        System.out.println("=== Resultado do IMC ===");
+        System.out.printf("IMC: %.2f\n", imc);
+        System.out.println("Classificação: " + classificacao);
+
+        scanner.close();
+    }
+}
+```
+
+### Exercício 2: Validador de Senha
+
+**Objetivo**: Usar operadores lógicos para validar senha.
+
+**Enunciado**: Crie um programa que valide uma senha usando operadores lógicos.
+
+**Resolução**:
+
+```java
+import java.util.Scanner;
+
+public class ValidadorSenha {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        System.out.print("Digite uma senha: ");
+        String senha = scanner.nextLine();
+
+        // Validações usando operadores lógicos
+        boolean temComprimentoMinimo = senha.length() >= 8;
+        boolean temMaiuscula = false;
+        boolean temMinuscula = false;
+        boolean temNumero = false;
+        boolean temEspecial = false;
+
+        for (char c : senha.toCharArray()) {
+            temMaiuscula = temMaiuscula || Character.isUpperCase(c);
+            temMinuscula = temMinuscula || Character.isLowerCase(c);
+            temNumero = temNumero || Character.isDigit(c);
+            temEspecial = temEspecial || !Character.isLetterOrDigit(c);
+        }
+
+        // Validação final usando AND lógico
+        boolean senhaValida = temComprimentoMinimo && temMaiuscula &&
+                             temMinuscula && temNumero && temEspecial;
+
+        System.out.println("=== Validação de Senha ===");
+        System.out.println("Comprimento mínimo: " + temComprimentoMinimo);
+        System.out.println("Tem maiúscula: " + temMaiuscula);
+        System.out.println("Tem minúscula: " + temMinuscula);
+        System.out.println("Tem número: " + temNumero);
+        System.out.println("Tem caractere especial: " + temEspecial);
+        System.out.println("Senha válida: " + senhaValida);
+
+        scanner.close();
+    }
+}
+```
+
+### Exercício 3: Calculadora de Juros Compostos
+
+**Objetivo**: Usar operadores aritméticos para calcular juros compostos.
+
+**Enunciado**: Crie um programa que calcule juros compostos usando operadores aritméticos.
+
+**Resolução**:
+
+```java
+import java.util.Scanner;
+
+public class CalculadoraJurosCompostos {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+
+        System.out.print("Capital inicial: R$ ");
+        double capital = scanner.nextDouble();
+
+        System.out.print("Taxa de juros (% ao mês): ");
+        double taxa = scanner.nextDouble() / 100; // Converte para decimal
+
+        System.out.print("Tempo (meses): ");
+        int tempo = scanner.nextInt();
+
+        // Cálculo usando operadores aritméticos
+        double montante = capital * Math.pow(1 + taxa, tempo);
+        double juros = montante - capital;
+        double rentabilidade = ((montante / capital) - 1) * 100;
+
+        // Verificações usando operadores relacionais
+        boolean lucroPositivo = juros > 0;
+        boolean rentabilidadeAlta = rentabilidade > 10;
+        boolean investimentoValido = capital > 0 && taxa > 0 && tempo > 0;
+
+        System.out.println("=== Cálculo de Juros Compostos ===");
+        System.out.printf("Capital inicial: R$ %.2f\n", capital);
+        System.out.printf("Taxa de juros: %.2f%% ao mês\n", taxa * 100);
+        System.out.println("Tempo: " + tempo + " meses");
+        System.out.printf("Montante final: R$ %.2f\n", montante);
+        System.out.printf("Juros ganhos: R$ %.2f\n", juros);
+        System.out.printf("Rentabilidade: %.2f%%\n", rentabilidade);
+        System.out.println("Lucro positivo: " + lucroPositivo);
+        System.out.println("Rentabilidade alta: " + rentabilidadeAlta);
+        System.out.println("Investimento válido: " + investimentoValido);
+
+        scanner.close();
+    }
+}
+```
+
+## Conclusão
+
+Operadores são fundamentais em Java para:
+
+- **Operações matemáticas**: Aritméticos para cálculos
+- **Comparações**: Relacionais para verificar condições
+- **Lógica**: Lógicos para combinar condições
+- **Atribuições**: De atribuição para modificar variáveis
+- **Manipulação de bits**: Bit a bit para operações de baixo nível
+
+**Boas práticas**:
+
+- Use parênteses para clarificar precedência
+- Compreenda a diferença entre `==` e `equals()`
+- Use operadores de atribuição composta para código mais limpo
+- Teste operadores lógicos com diferentes combinações
+
+Lembre-se de praticar com diferentes tipos de operadores para dominar esses conceitos fundamentais.
