--- a/content/docs/variables-primitive-data-types.mdx
+++ b/content/docs/variables-primitive-data-types.mdx
@@ -1,202 +1,419 @@
 ---
-title: Java Data Types
-description: In this tutorial, we will learn about all 8 primitive data types in Java with the help of examples.
+title: "Tipos de Dados Primitivos em Java"
+description: "Neste tutorial, aprenderemos sobre todos os 8 tipos de dados primitivos em Java com exemplos práticos"
+difficulty: "Básico"
+category: "Fundamentos Java"
 ---
 
-## Java Data Types
+## Tipos de Dados Java
 
-As the name suggests, data types specify the type of data that can be stored inside [variables in Java](/docs/variables-and-literals).
+Como o nome sugere, tipos de dados especificam o tipo de dados que pode ser armazenado dentro de [variáveis em Java](/docs/variables-and-literals).
 
-Java is a statically-typed language. This means that all variables must be declared before they can be used.
+Java é uma linguagem estaticamente tipada. Isso significa que todas as variáveis devem ser declaradas antes de serem usadas.
 
 ```java
-int speed;
+int velocidade;
 ```
 
-Here, `speed` is a variable, and the data type of the variable is `int`.
+Aqui, `velocidade` é uma variável, e o tipo de dados da variável é `int`.
 
-The `int` data type determines that the `speed` variable can only contain integers.
+O tipo de dados `int` determina que a variável `velocidade` pode apenas conter inteiros.
 
-There are 8 data types predefined in Java programming language, known as primitive data types.
+Existem 8 tipos de dados predefinidos na linguagem de programação Java, conhecidos como tipos de dados primitivos.
 
 <Callout>
 
-  **Note :** In addition to primitive data types, there are also referenced
-  types (object type).
+**Nota**: Além dos tipos de dados primitivos, também existem tipos de referência (tipo objeto).
 
 </Callout>
 
-## 8 Primitive Data Types
+## 8 Tipos de Dados Primitivos
 
- ### 1. boolean type
+### 1. Tipo boolean
 
-   - The `boolean` data type has two possible values, either true or false.
-   - They are usually used for **true/false** conditions.
-   - **Default value : `false`**.
+- O tipo de dados `boolean` tem dois valores possíveis: `true` ou `false`.
+- Geralmente são usados para condições **verdadeiro/falso**.
+- **Valor padrão**: `false`.
 
-   #### Example 1: Java `boolean` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   boolean flag = true;
-   System.out.println(flag); // prints true
-   }
-   }
-   ```
-
-### 2. byte type
-
-   - The `byte` data type can have values from **-128** to **127** (8-bit signed two's complement integer).
-   - If it's certain that the value of a variable will be within -128 to 127, then it is used instead of int to save memory.
-   - **Default value : 0**
-
-   #### Example 2: Java `byte` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-       byte range;
-       range = 124;
-       System.out.println(range);    // prints 124
-   }
-   }
-   ```
-
-### 3. short type
-
-   - The `short` data type in Java can have values from **-32768** to **32767** (16-bit signed two's complement integer).
-   - If it's certain that the value of a variable will be within -32768 and 32767, then it is used instead of other integer data types (`int`, `long`).
-   - **Default value : 0**
-
-   #### Example 3: Java `short` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   short temperature;
-   temperature = -200;
-   System.out.println(temperature); // prints -200
-   }
-   }
-   ```
-
-### 4. int type
-
-   - The int data type can have values from **-2<sup>31</sup>** to **2<sup>31</sup> -1** (32-bit signed two's complement integer).
-   - If you are using Java 8 or later, you can use an unsigned 32-bit integer. This will have a minimum value of 0 and a maximum value of 2<sup>32-1</sup>. To learn more, visit [How to use the unsigned integer in java 8?](http://stackoverflow.com/questions/25556017/how-to-use-the-unsigned-integer-in-java-8)
-   - **Default value : 0**
-
-   #### Example 4: Java `int` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   int range = -4250000;
-   System.out.println(range); // print -4250000
-   }
-   }
-   ```
-
-### 5. long type
-
-   - The `long` data type can have values from **-2<sup>63</sup>** to **2<sup>63</sup> -1** (64-bit signed two's complement integer).
-   - If you are using Java 8 or later, you can use an unsigned 64-bit integer with a minimum value of 0 and a maximum value of 2<sup>64</sup> -1.
-   - **Default value : 0**
-
-   #### Example 5: Java `long` data type
-
-   ```java
-   class LongExample {
-   public static void main(String[] args) {
-   long range = -42332200000L;
-   System.out.println(range); // prints -42332200000
-   }
-   }
-   ```
-
-   Notice, the use of `L` at the end of `-42332200000`. This represents that it's an integral literal of the `long` type. You will learn about integral literals later in this article.
-
-### 6. double type
-
-   - The `double` data type is a double-precision 64-bit floating-point.
-   - It should never be used for precise values such as currency.
-   - **Default value : 0.0 (0.0d)**
-
-   #### Example 6: Java `double` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   double number = -42.3;
-   System.out.println(number); // prints -42.3
-   }
-   }
-   ```
-
-### 7. float type
-
-   - The `float` data type is a single-precision 32-bit floating-point.Learn more about [single-precision and double-precision floating-point](http://stackoverflow.com/questions/801117/whats-the-difference-between-a-single-precision-and-double-precision-floating-p) if you are interested.
-   - It should never be used for precise values such as currency.
-   - **Default value : 0.0 (0.0f)**
-
-   #### Example 7: Java `float` data type
-
-   ```java highlight=3
-   class Main {
-   public static void main(String[] args) {
-   float number = -42.3f;
-   System.out.println(number); // prints -42.3
-   }
-   }
-   ```
-
-   Notice that, we have used `-42.3f` instead of `-42.3` in the above program. It's because `-42.3` is a `double` literal.
-   To tell the compiler to treat `-42.3` as `float` rather than `double`, you need to use `f` or `F`.
-   If you want to know about single-precision and double-precision, visit Java single-precision and double-precision floating-point.
-
-### 8. char type
-
-   - It's a 16-bit Unicode character.
-   - The minimum value of the `char` data type is `'\u0000'` (0) and the maximum value of the is `'\uffff'`.
-   - **Default value : '\u0000'**
-
-   #### Example 8: Java `char` data type
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   char letter = '\u0051';
-   System.out.println(letter); // prints Q
-   }
-   }
-   ```
-
-   Here, the Unicode value of Q is `\u0051`. Hence, we get Q as the output.
-
-   Here is another example:
-
-   ```java
-   class Main {
-   public static void main(String[] args) {
-   char letter1 = '9';
-   System.out.println(letter1); // prints 9
-   char letter2 = 65;
-   System.out.println(letter2); // prints A
-
-   }
-   }
-   ```
-
-Here, we have assigned 9 as a character (specified by single quotes) to the letter1 variable. However, the letter2 variable is assigned 65 as an integer number (no single quotes).
-
-Hence, A is printed to the output. It is because Java treats characters as integral types and the ASCII value of A is 65. To learn more about ASCII, visit What is ASCII Code?.
-
-## String type
-Java also provides support for character strings via java.lang.String class. Strings in Java are not primitive types. Instead, they are objects. For example,
+#### Exemplo 1: Tipo de dados `boolean` Java
 
 ```java
-String myString = "Java Programming";
+public class Main {
+    public static void main(String[] args) {
+        boolean flag = true;
+        System.out.println(flag); // imprime true
+    }
+}
 ```
 
-Here, myString is an object of the String class. To learn more, visit [Java Strings](/docs/string).
+### 2. Tipo byte
+
+- O tipo de dados `byte` pode ter valores de **-128** a **127** (inteiro de 8 bits com complemento de dois).
+- Se for certo que o valor de uma variável estará entre -128 e 127, então é usado em vez de int para economizar memória.
+- **Valor padrão**: 0
+
+#### Exemplo 2: Tipo de dados `byte` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        byte range;
+        range = 124;
+        System.out.println(range);    // imprime 124
+    }
+}
+```
+
+### 3. Tipo short
+
+- O tipo de dados `short` em Java pode ter valores de **-32768** a **32767** (inteiro de 16 bits com complemento de dois).
+- Se for certo que o valor de uma variável estará entre -32768 e 32767, então é usado em vez de outros tipos de dados inteiros (`int`, `long`).
+- **Valor padrão**: 0
+
+#### Exemplo 3: Tipo de dados `short` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        short temperatura;
+        temperatura = -200;
+        System.out.println(temperatura); // imprime -200
+    }
+}
+```
+
+### 4. Tipo int
+
+- O tipo de dados int pode ter valores de **-2<sup>31</sup>** a **2<sup>31</sup> -1** (inteiro de 32 bits com complemento de dois).
+- Se você estiver usando Java 8 ou posterior, pode usar um inteiro de 32 bits não assinado. Isso terá um valor mínimo de 0 e um valor máximo de 2<sup>32-1</sup>.
+- **Valor padrão**: 0
+
+#### Exemplo 4: Tipo de dados `int` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        int range = -4250000;
+        System.out.println(range); // imprime -4250000
+    }
+}
+```
+
+### 5. Tipo long
+
+- O tipo de dados `long` pode ter valores de **-2<sup>63</sup>** a **2<sup>63</sup> -1** (inteiro de 64 bits com complemento de dois).
+- **Valor padrão**: 0L
+
+#### Exemplo 5: Tipo de dados `long` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        long range = 42332200000L;
+        System.out.println(range); // imprime 42332200000
+    }
+}
+```
+
+### 6. Tipo double
+
+- O tipo de dados `double` é um número de ponto flutuante de precisão dupla de 64 bits.
+- **Valor padrão**: 0.0d
+
+#### Exemplo 6: Tipo de dados `double` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        double numero = -42.3;
+        System.out.println(numero); // imprime -42.3
+    }
+}
+```
+
+### 7. Tipo float
+
+- O tipo de dados `float` é um número de ponto flutuante de precisão simples de 32 bits.
+- **Valor padrão**: 0.0f
+
+#### Exemplo 7: Tipo de dados `float` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        float numero = -42.3f;
+        System.out.println(numero); // imprime -42.3
+    }
+}
+```
+
+### 8. Tipo char
+
+- O tipo de dados `char` é um caractere Unicode de 16 bits.
+- **Valor padrão**: '\u0000'
+
+#### Exemplo 8: Tipo de dados `char` Java
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        char letra = '\u0051';
+        System.out.println(letra); // imprime Q
+
+        char letra2 = '9';
+        System.out.println(letra2); // imprime 9
+
+        char letra3 = 65;
+        System.out.println(letra3); // imprime A
+    }
+}
+```
+
+## Resumo dos Tipos Primitivos
+
+| Tipo    | Tamanho (bits) | Intervalo                        | Valor Padrão |
+| ------- | -------------- | -------------------------------- | ------------ |
+| boolean | 1              | true, false                      | false        |
+| byte    | 8              | -128 a 127                       | 0            |
+| short   | 16             | -32,768 a 32,767                 | 0            |
+| int     | 32             | -2³¹ a 2³¹-1                     | 0            |
+| long    | 64             | -2⁶³ a 2⁶³-1                     | 0L           |
+| float   | 32             | ±3.4E-38 a ±3.4E+38              | 0.0f         |
+| double  | 64             | ±1.7E-308 a ±1.7E+308            | 0.0d         |
+| char    | 16             | '\u0000' a '\uffff' (0 a 65,535) | '\u0000'     |
+
+## Exemplos Práticos
+
+### Exemplo 1: Calculadora com Tipos Primitivos
+
+```java
+public class CalculadoraTipos {
+    public static void main(String[] args) {
+        // Tipos inteiros
+        byte b = 10;
+        short s = 1000;
+        int i = 100000;
+        long l = 1000000000L;
+
+        // Tipos de ponto flutuante
+        float f = 3.14f;
+        double d = 3.14159265359;
+
+        // Tipo booleano
+        boolean ativo = true;
+
+        // Tipo caractere
+        char letra = 'A';
+
+        // Operações
+        int soma = b + s;
+        double produto = f * d;
+
+        System.out.println("Soma: " + soma);
+        System.out.println("Produto: " + produto);
+        System.out.println("Ativo: " + ativo);
+        System.out.println("Letra: " + letra);
+    }
+}
+```
+
+### Exemplo 2: Conversão de Tipos
+
+```java
+public class ConversaoTipos {
+    public static void main(String[] args) {
+        // Conversão implícita (automática)
+        int numero = 100;
+        long numeroLongo = numero; // int para long
+        float numeroFloat = numeroLongo; // long para float
+
+        // Conversão explícita (casting)
+        double numeroDouble = 9.99;
+        int numeroInteiro = (int) numeroDouble; // double para int
+
+        System.out.println("Número original: " + numeroDouble);
+        System.out.println("Número convertido: " + numeroInteiro);
+
+        // Perda de precisão
+        double grande = 123456789.123456789;
+        float pequeno = (float) grande;
+
+        System.out.println("Double: " + grande);
+        System.out.println("Float: " + pequeno);
+    }
+}
+```
+
+### Exemplo 3: Validação de Tipos
+
+```java
+public class ValidacaoTipos {
+    public static void main(String[] args) {
+        // Validação de byte
+        byte idade = 25;
+        boolean idadeValida = idade >= 0 && idade <= 127;
+
+        // Validação de short
+        short temperatura = 30;
+        boolean temperaturaValida = temperatura >= -32768 && temperatura <= 32767;
+
+        // Validação de int
+        int populacao = 1000000;
+        boolean populacaoValida = populacao >= 0;
+
+        // Validação de float
+        float altura = 1.75f;
+        boolean alturaValida = altura > 0 && altura < 3.0f;
+
+        System.out.println("Idade válida: " + idadeValida);
+        System.out.println("Temperatura válida: " + temperaturaValida);
+        System.out.println("População válida: " + populacaoValida);
+        System.out.println("Altura válida: " + alturaValida);
+    }
+}
+```
+
+## Exercícios Práticos
+
+### Exercício 1: Calculadora de Área
+
+**Objetivo**: Usar tipos primitivos para calcular áreas.
+
+**Enunciado**: Crie um programa que calcule a área de diferentes formas geométricas usando tipos primitivos apropriados.
+
+**Resolução**:
+
+```java
+public class CalculadoraArea {
+    public static void main(String[] args) {
+        // Área do círculo
+        double raio = 5.0;
+        double areaCirculo = Math.PI * raio * raio;
+
+        // Área do retângulo
+        int largura = 10;
+        int altura = 5;
+        int areaRetangulo = largura * altura;
+
+        // Área do triângulo
+        float base = 8.0f;
+        float alturaTriangulo = 6.0f;
+        float areaTriangulo = (base * alturaTriangulo) / 2;
+
+        // Verificações
+        boolean circuloValido = raio > 0;
+        boolean retanguloValido = largura > 0 && altura > 0;
+        boolean trianguloValido = base > 0 && alturaTriangulo > 0;
+
+        // Resultados
+        System.out.println("=== Cálculo de Áreas ===");
+        System.out.printf("Área do círculo: %.2f\n", areaCirculo);
+        System.out.println("Área do retângulo: " + areaRetangulo);
+        System.out.printf("Área do triângulo: %.2f\n", areaTriangulo);
+
+        System.out.println("\n=== Validações ===");
+        System.out.println("Círculo válido: " + circuloValido);
+        System.out.println("Retângulo válido: " + retanguloValido);
+        System.out.println("Triângulo válido: " + trianguloValido);
+    }
+}
+```
+
+### Exercício 2: Conversor de Temperatura
+
+**Objetivo**: Usar tipos primitivos para conversões.
+
+**Enunciado**: Crie um programa que converta temperaturas entre Celsius, Fahrenheit e Kelvin.
+
+**Resolução**:
+
+```java
+public class ConversorTemperatura {
+    public static void main(String[] args) {
+        // Temperatura em Celsius
+        double celsius = 25.0;
+
+        // Conversão para Fahrenheit
+        double fahrenheit = (celsius * 9/5) + 32;
+
+        // Conversão para Kelvin
+        double kelvin = celsius + 273.15;
+
+        // Validações
+        boolean celsiusValido = celsius >= -273.15; // Zero absoluto
+        boolean fahrenheitValido = fahrenheit >= -459.67; // Zero absoluto em Fahrenheit
+        boolean kelvinValido = kelvin >= 0;
+
+        // Resultados
+        System.out.println("=== Conversor de Temperatura ===");
+        System.out.printf("Celsius: %.1f°C\n", celsius);
+        System.out.printf("Fahrenheit: %.1f°F\n", fahrenheit);
+        System.out.printf("Kelvin: %.1fK\n", kelvin);
+
+        System.out.println("\n=== Validações ===");
+        System.out.println("Celsius válido: " + celsiusValido);
+        System.out.println("Fahrenheit válido: " + fahrenheitValido);
+        System.out.println("Kelvin válido: " + kelvinValido);
+    }
+}
+```
+
+### Exercício 3: Validador de CPF
+
+**Objetivo**: Usar tipos primitivos para validação.
+
+**Enunciado**: Crie um programa que valide um CPF usando tipos primitivos.
+
+**Resolução**:
+
+```java
+public class ValidadorCPF {
+    public static void main(String[] args) {
+        // CPF como string
+        String cpf = "12345678909";
+
+        // Validações usando tipos primitivos
+        boolean tem11Digitos = cpf.length() == 11;
+        boolean todosIguais = cpf.matches("(\\d)\\1{10}");
+
+        // Verificar se todos são dígitos
+        boolean todosDigitos = true;
+        for (char c : cpf.toCharArray()) {
+            if (!Character.isDigit(c)) {
+                todosDigitos = false;
+                break;
+            }
+        }
+
+        // Resultado final
+        boolean cpfValido = tem11Digitos && !todosIguais && todosDigitos;
+
+        // Exibição
+        System.out.println("=== Validação de CPF ===");
+        System.out.println("CPF: " + cpf);
+        System.out.println("Tem 11 dígitos: " + tem11Digitos);
+        System.out.println("Todos iguais: " + todosIguais);
+        System.out.println("Todos dígitos: " + todosDigitos);
+        System.out.println("CPF válido: " + cpfValido);
+    }
+}
+```
+
+## Conclusão
+
+Os tipos de dados primitivos são fundamentais em Java:
+
+- **Tipos inteiros**: `byte`, `short`, `int`, `long` para números inteiros
+- **Tipos de ponto flutuante**: `float`, `double` para números decimais
+- **Tipo booleano**: `boolean` para valores verdadeiro/falso
+- **Tipo caractere**: `char` para caracteres Unicode
+
+**Boas práticas**:
+
+- Escolha o tipo apropriado para economizar memória
+- Use `int` para a maioria dos casos de números inteiros
+- Use `double` para cálculos de precisão
+- Use `boolean` para condições lógicas
+- Sempre valide os dados antes de usar
+
+Lembre-se de escolher o tipo de dados correto para cada situação específica.
